--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "bootstrap-sass-official": "~3.1.0",
     "angular-cookies": "1.2.15",
     "angular-sanitize": "1.2.15",
-    "angular-route": "1.2.15"
+    "angular-route": "1.2.15",
+    "angular-ui-router": "~0.2.10"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
