--- a/bower.json
+++ b/bower.json
@@ -6,11 +6,11 @@
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
     "jquery": "~1.11.0",
-    "bootstrap-sass-official": "~3.1.0",
     "angular-cookies": "1.2.15",
     "angular-sanitize": "1.2.15",
     "angular-route": "1.2.15",
-    "angular-ui-router": "~0.2.10"
+    "angular-ui-router": "~0.2.10",
+    "foundation": "~5.2.2"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
